@@ -80,6 +80,11 @@
             <artifactId>commons-text</artifactId>
             <version>1.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.java-diff-utils</groupId>
+            <artifactId>java-diff-utils</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <dependency>
@@ -100,7 +105,11 @@
                     <target>21</target>
                     <release>${maven.compiler.release}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.jsobject</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
